Fix scroll animations on iOS app

--- a/src/pages/Summary.css
+++ b/src/pages/Summary.css
@@ -40,6 +40,7 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
     grid-area: logs;
+    z-index: 2;
 }
 
 .mood-log-list::-webkit-scrollbar {
